refactor: change transactions paging domain to control page
